fixed gradient overflow issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,10 @@ body {
   overflow-x: hidden !important;
   margin: 0;
 }
+main {
+  position: relative;
+  overflow: hidden;
+}
 
 h1,
 h2,
