--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -15,14 +15,13 @@
   position: fixed;
   background: var(--active-nav-color);
   z-index: 10;
+  text-align: center;
 }
 .link_active {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 90%;
 }
 .link {
   display: flex;
