--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -18,7 +18,3 @@
   color: var(--text-color);
   cursor: pointer;
 }
-.g1 {
-  top: 2100px;
-  left: -500px;
-}
